Make the application a Java 9 module